Let siblings layout if an adjacent float may no longer affect them

Negative margin top can move a float up out of the way of siblings/descendants
that are currently avoiding them. We need to account for the position of the child's
current lowest float so that it can try laying out again.

BUG=711938

Review-Url: https://codereview.chromium.org/2836293003
Cr-Commit-Position: refs/heads/master@{#467479}

Former-commit-id: 789b5e528fb3bd9ca44341de46547c45355652ab